@@ -4,19 +4,20 @@ import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import de.bonndan.nivio.input.dto.Environment;
+import org.apache.commons.text.StringSubstitutor;
+import org.apache.commons.text.lookup.StringLookupFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.util.StringUtils;
 
 import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.nio.file.Files;
-import java.util.Optional;
-
-import de.bonndan.nivio.input.dto.ServiceDescription;
-import org.apache.commons.text.StringSubstitutor;
-import org.apache.commons.text.lookup.StringLookupFactory;
 
 public class EnvironmentFactory {
 
+    private static final Logger LOGGER = LoggerFactory.getLogger(EnvironmentFactory.class);
     private static final ObjectMapper mapper = new ObjectMapper(new YAMLFactory());
 
     static {
@@ -28,7 +29,12 @@ public class EnvironmentFactory {
     public static Environment fromYaml(File file) {
 
         try {
-            Environment environment = fromString(Files.readString(file.toPath()));
+            String content = new String(Files.readAllBytes(file.toPath()));
+            if (StringUtils.isEmpty(content)) {
+                LOGGER.warn("Got a seemingly empty file " + file + ". Skipping"); //TODO watcher issue
+                return null;
+            }
+            Environment environment = fromString(content);
             environment.setSource(file.toString());
             environment.getSourceReferences().forEach(ref -> ref.setEnvironment(environment));
             return environment;
@@ -45,7 +51,7 @@ public class EnvironmentFactory {
      */
     public static Environment fromString(String yaml) {
 
-         yaml = (new StringSubstitutor(StringLookupFactory.INSTANCE.environmentVariableStringLookup())).replace(yaml);
+        yaml = (new StringSubstitutor(StringLookupFactory.INSTANCE.environmentVariableStringLookup())).replace(yaml);
 
         try {
             Environment environment = mapper.readValue(yaml, Environment.class);
@@ -54,7 +60,7 @@ public class EnvironmentFactory {
             sanitizeTemplates(environment);
             return environment;
         } catch (IOException e) {
-            throw new ReadingException("Failed to create an environment from yaml input string", e);
+            throw new ReadingException("Failed to create an environment from yaml input string: " + e.getMessage(), e);
         }
 
     }
@@ -63,7 +69,7 @@ public class EnvironmentFactory {
      * Creates a new environment description and sets the given url as source.
      *
      * @param yaml source
-     * @param url for updates
+     * @param url  for updates
      * @return env description
      */
     public static Environment fromString(String yaml, URL url) {
